flux/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uniwise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uniwise
  template:
    metadata:
      labels:
        app: uniwise
    spec:
      containers:
      - name: uniwise
        image: ghcr.io/purvaldur/uniwise:latest
        ports:
        - containerPort: 4444
        volumeMounts:
        - name: users
          mountPath: "/app/secrets"
      volumes:
      - name: users
        secret:
          secretName: users
---
