flux/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: uniwise
  namespace: uniwise
spec:
  selector:
    app: uniwise
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4444
  type: ClusterIP
