flux/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: uniwise
  namespace: uniwise
spec:
  ingressClassName: nginx
  rules:
    - host: uniwise.vald.io
      http:
        paths:
          - backend:
              service:
                name: uniwise
                port:
                  number: 80
            path: /
            pathType: Prefix
  
  tls:
    - hosts:
        - uniwise.vald.io
      secretName: echo-tls
